#203 Should be fixed now with forced scrollers and better management of overflow

--- a/css/core.css
+++ b/css/core.css
@@ -8,7 +8,6 @@ div.title {
     margin-bottom: 10px;
     font-size: 2em;
 }
-
 div.indicator-box {
     position: absolute;
     left: 150px;
@@ -19,7 +18,6 @@ div.indicator-box {
     border-radius: 10px;
     background-color: rgb(100, 200, 200);
 }
-
 div.comment-div {
     border: 1px solid #444444;
     max-width: 600px;
@@ -29,11 +27,9 @@ div.comment-div {
     height: 90px;
     border-radius: 10px;
 }
-
 div.comment-div span {
     margin-left: 15px;
 }
-
 div.popupHolder {
     width: 500px;
     min-height: 250px;
@@ -44,19 +40,16 @@ div.popupHolder {
     z-index: 10;
     position: fixed;
 }
-
 div#popupContent {
     margin-top: 20px;
     margin-bottom: 35px;
     overflow: auto;
 }
-
 div#popupContent iframe {
     width: 100%;
     border: 0px none;
     height: 290px;
 }
-
 div#popupTitleHolder {
     width: inherit;
     min-height: 25px;
@@ -66,19 +59,17 @@ div#popupTitleHolder {
     padding: 8px;
     text-align: center;
 }
-
 #popupTitle {
     white-space: pre-line;
 }
-
 div#popupResponse {
     width: inherit;
     min-height: 50px;
-    max-height: 320px;
+    max-height: 270px;
     overflow: auto;
     position: relative;
+    margin-bottom: 10px;
 }
-
 button.popupButton {
     /* Button for popup window
 	 */
@@ -91,7 +82,6 @@ button.popupButton {
     border-style: solid;
     background-color: #fff;
 }
-
 div.popup-option-checbox {
     /* Popup window checkbox */
     padding: 5px;
@@ -99,41 +89,33 @@ div.popup-option-checbox {
     width: -moz-fit-content;
     width: -webkit-fit-content;
 }
-
 div.popup-option-checbox input {
     /* Popup window checkbox */
     margin-right: 15px;
 }
-
 table.popup-option-list {
     margin: auto;
 }
-
 table.popup-option-list tr {
     padding: 5px;
 }
-
 table.popup-option-list tr td {
     padding: 5px;
 }
-
 div.survey-slider-text-holder {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     padding: 0px 15px;
 }
-
 button#popup-proceed {
     bottom: 10px;
     right: 10px;
 }
-
 button#popup-previous {
     bottom: 10px;
     left: 10px;
 }
-
 div.testHalt {
     /* Specify any colouring during the test halt for pre/post questions */
     background-color: rgba(0, 0, 0, 0.5);
@@ -145,7 +127,6 @@ div.testHalt {
     left: 0px;
     top: 0px;
 }
-
 div#lightbox-root {
     visibility: hidden;
     z-index: 20;
@@ -153,7 +134,6 @@ div#lightbox-root {
     min-height: 50px;
     max-height: 250px;
 }
-
 div.lightbox-error {
     margin: 25px;
     margin-bottom: 50px;
@@ -162,7 +142,6 @@ div.lightbox-error {
     background-color: rgb(255, 220, 220);
     border: 2px rgb(200, 0, 0) solid;
 }
-
 div.lightbox-warning {
     margin: 25px;
     margin-bottom: 50px;
@@ -171,7 +150,6 @@ div.lightbox-warning {
     background-color: rgb(255, 255, 220);
     border: 2px rgb(255, 250, 0) solid;
 }
-
 div.lightbox-message {
     margin: 25px;
     margin-bottom: 50px;
@@ -180,26 +158,22 @@ div.lightbox-message {
     background-color: rgb(200, 220, 255);
     border: 2px rgb(50, 100, 250) solid;
 }
-
 div#lightbox-blanker {
     visibility: hidden;
     z-index: 19;
 }
-
 button.outside-reference {
     width: 120px;
     height: 20px;
     margin-bottom: 5px;
     position: absolute;
 }
-
 textarea.trackComment {
     max-width: 594px;
     min-width: 350px;
     max-height: 60px;
     resize: none;
 }
-
 div.playhead {
     width: 500px;
     height: 50px;
@@ -207,26 +181,22 @@ div.playhead {
     border-radius: 10px;
     padding: 10px;
 }
-
 div.playhead-scrub-track {
     width: 100%;
     height: 10px;
     border-style: solid;
     border-width: 1px;
 }
-
 div#playhead-scrubber {
     width: 10px;
     height: 10px;
     position: relative;
     background-color: #000;
 }
-
 div.master-volume-holder-inline {
     width: 100%;
     padding: 5px;
 }
-
 div.master-volume-holder-float {
     position: absolute;
     top: 20px;
@@ -234,7 +204,6 @@ div.master-volume-holder-float {
     width: 250px%;
     padding: 5px;
 }
-
 div#master-volume-root {
     margin: auto;
     border: black 1px solid;
@@ -242,7 +211,6 @@ div#master-volume-root {
     width: 250px;
     height: 40px;
 }
-
 input#master-volume-control {
     width: 190px;
     height: 25px;
@@ -250,28 +218,23 @@ input#master-volume-control {
     margin: 0px;
     padding: 0px;
 }
-
 span#master-volume-feedback {
     height: 25px;
     margin: 0px 5px;
     float: right;
 }
-
 div.error-colour {
     background-color: #FF8F8F;
 }
-
 button.error-colour {
     background-color: #FF8F8F;
     color: black;
 }
-
 div.calibration-holder {
     text-align: center;
     align-content: center;
     height: auto;
 }
-
 div.calibration-slider {
     width: 50px;
     margin: 2px;
@@ -279,7 +242,6 @@ div.calibration-slider {
     align-content: center;
     float: left;
 }
-
 div.calibration-slider input[type=range][orient=vertical] {
     writing-mode: bt-lr;
     /* IE */
@@ -290,7 +252,6 @@ div.calibration-slider input[type=range][orient=vertical] {
     height: 290px;
 }
 
-
 /*  Comment Boxes */
 
 div.comment-slider-text-holder {
@@ -298,25 +259,21 @@ div.comment-slider-text-holder {
     flex-direction: row;
     justify-content: space-between;
 }
-
 div.comment-slider-text-holder span {
     margin: 0px 5px;
 }
-
 div.comment-checkbox-inputs-holder {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     margin: 10px 5px;
 }
-
 div.comment-checkbox-inputs-flex {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
-
 div.comment-box-playing {
     background-color: #FFDDDD;
 }
